--- a/Trunk.toml
+++ b/Trunk.toml
@@ -1,11 +1,11 @@
 [extension]
-name = "pg_ivm"
-version = "1.8.0+partitioning"
-repository = "https://github.com/sraoss/pg_ivm"
+name = "tembo_ivm"
+version = "1.9.1"
+repository = "https://github.com/tembo-io/pg_ivm"
 license = "PostgreSQL"
 description = "IVM (Incremental View Maintenance) implementation as a PostgreSQL extension"
 homepage = "https://www.sraoss.co.jp/index_en/"
-documentation = "https://github.com/sraoss/pg_ivm"
+documentation = "https://github.com/tembo-io/pg_ivm"
 categories = ["change_data_capture"]
 
 [dependencies]
